src/objects/Top_Markets__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Input form to capture individual sections of Top Market Report</description>
    <fields>
        <fullName>Approval_Queue__c</fullName>
        <description>ITA Business Unit</description>
        <inlineHelpText>Select the ITA business unit that is the owner of this content.</inlineHelpText>
        <label>Approval Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Industry &amp; Analysis</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Atom__c</fullName>
        <description>Body of an Article</description>
        <inlineHelpText>This rich-text area is where the body of your content should be placed. The content should not deviate from the overall theme and should stand on its own as a reliable source of information. Otherwise, a new topic should be created.</inlineHelpText>
        <label>Atom</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Published_Date__c</fullName>
        <formula>TODAY() - DATEVALUE( LastPublishedDate )</formula>
        <label>Days Since Last Published Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Draft_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags the draft version as ready for approval</description>
        <label>Draft Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_0__c</fullName>
        <label>Level 0</label>
        <picklist>
            <picklistValues>
                <fullName>Top Markets</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <description>Related Chapter to the Top Market Report.</description>
        <inlineHelpText>Select the applicable chapter from the publication that your content belongs to.</inlineHelpText>
        <label>Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>Executive Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overall Market Rankings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Case Study</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <description>Related section of the related Chapter of the Top Markets report.</description>
        <inlineHelpText>Choose the section within the chapter that your content is associated with.</inlineHelpText>
        <label>Level 2</label>
        <picklist>
            <controllingField>Level_1__c</controllingField>
            <picklistValues>
                <fullName>Sector Snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenges &amp; Barriers to Exports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities for US Companies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Title__c</fullName>
        <description>This is the title that will show on mobile sites</description>
        <label>Mobile Title</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_URL__c</fullName>
        <description>Full Public URL for Top Markets Articles</description>
        <formula>HYPERLINK($Label.export_gov&amp;&quot;/article?id=&quot;&amp;UrlName, $Label.export_gov&amp;&quot;/article?id=&quot;&amp;UrlName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <description>Article references</description>
        <inlineHelpText>If there are any references that were used during the writing of the content, they can be highlighted here. The rich text editor allows for formatting and link creation.</inlineHelpText>
        <label>References (Public)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to relate articles to specific Series</description>
        <inlineHelpText>Type a keyword, such as country name and click the magnifying glass to search available Series.</inlineHelpText>
        <label>Series</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Series__c.Type__c</field>
                <operation>equals</operation>
                <value>Top Markets</value>
            </filterItems>
            <infoMessage>Search by industry name to find a Top Markets Report</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Series__c</referenceTo>
        <relationshipLabel>Top Markets Articles</relationshipLabel>
        <relationshipName>Top_Markets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Tracks the stages of an Article through an approval process</description>
        <inlineHelpText>Stage is the phase of the process that your content is in.</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Top Markets</label>
    <pluralLabel>Top Markets</pluralLabel>
    <validationRules>
        <fullName>Required_Level_1</fullName>
        <active>true</active>
        <description>Level 1 is mandatory</description>
        <errorConditionFormula>ISBLANK(TEXT(Level_1__c))</errorConditionFormula>
        <errorMessage>Please pick Level 1 (Mandatory field)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Mobile_Title</fullName>
        <active>true</active>
        <description>Mobile Title Needed if Article Title is larger than 37 characters</description>
        <errorConditionFormula>AND( (LEN(Title)&gt;37) , ISBLANK( Mobile_Title__c ) )</errorConditionFormula>
        <errorMessage>Please enter the Mobile Title (Article Title is too large for Mobile view)</errorMessage>
    </validationRules>
</CustomObject>